force-app/main/default/objects/Individual_Achievement_Unit__c/Individual_Achievement_Unit__c.object-meta.xml
<CustomObject>
    <description>Individual “unit” contributions against the Individual Achievement.</description>
    <label>Individual Achievement Unit</label>
    <nameField>
        <displayFormat>IAU-{00000}</displayFormat>
        <label>Individual Achievement Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Achievement Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>