force-app/main/default/objects/Individual_Achievement_Unit__c/fields/Agreement_Recognition_Unit__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Recognition_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Recognition Unit</label>
    <referenceTo>Agreement_Recognition_Unit__c</referenceTo>
    <relationshipLabel>Individual Achievement Units</relationshipLabel>
    <relationshipName>Individual_Achievement_Units</relationshipName>
    <type>Lookup</type>
</CustomField>