force-app/main/default/objects/Individual_Achievement_Unit__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <formula>Agreement_Recognition_Unit__r.Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>