force-app/main/default/objects/Individual_Achievement_Unit__c/fields/Individual_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Individual_Achievement__c</fullName>
    <label>Individual Achievement</label>
    <referenceTo>Individual_Achievement__c</referenceTo>
    <relationshipLabel>Individual Achievement Units</relationshipLabel>
    <relationshipName>Individual_Achievement_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>