force-app/main/default/objects/Individual_Achievement_Unit__c/fields/Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>Letter_Grade__c</fullName>
    <label>Letter Grade</label>
    <length>60</length>
    <type>Text</type>
</CustomField>