force-app/main/default/objects/Individual_Achievement_Unit__c/fields/Verification_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status_Reason__c</fullName>
    <label>Verification Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Illegible</fullName>
            </value>
            <value>
                <fullName>Incomplete Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>